# ProcessadorDados

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: app.py  backend.py  contrato.py  frontend.py
tests/: test_contrato.py
